--- a/proyectoUNP/Views/Shared/_Layout.cshtml
+++ b/proyectoUNP/Views/Shared/_Layout.cshtml
@@ -9,12 +9,9 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 <style>
-        /* Navbar styles */
         .navbar {
             margin-bottom: 20px;
         }
-
-        /* Sidebar styles */
         .sidebar {
             width: 250px;
             background-color: #f8f9fa;
@@ -23,12 +20,9 @@
             position: fixed;
             height: 100%;
         }
-
         .sidebar h4 {
             margin-bottom: 15px;
         }
-
-        /* Menu items */
         .sidebar .nav-item {
             margin-bottom: 10px;
         }
@@ -41,13 +35,9 @@
         .sidebar .nav-link:hover {
             text-decoration: underline;
         }
-
-        /* Main content area */
         .body-content {
-            margin-left: 270px; /* Adjust for sidebar width */
+            margin-left: 270px; 
         }
-
-        /* Footer styles */
         footer {
             text-align: center;
             padding: 10px 0;
@@ -76,7 +66,7 @@
         <h4>Menu</h4>
         <ul class="navbar-nav" style="list-style-type: none; padding: 0;">
             <li class="nav-item">@Html.ActionLink("Empleados", "Index", "Empleados", new { area = "" }, new { @class = "nav-link" })</li>
-            <li class="nav-item">@Html.ActionLink("BajaEmpleado", "BajaEmpleado", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+            <li class="nav-item">@Html.ActionLink("BajaEmpleado", "BajaEmpleado", "Empleados", new { area = "" }, new { @class = "nav-link" })</li>
             <li class="nav-item">@Html.ActionLink("Activos", "Index", "Activos", new { area = "" }, new { @class = "nav-link" })</li>
             <li class="nav-item">@Html.ActionLink("Adquisicion", "Index", "Adquisiciones", new { area = "" }, new { @class = "nav-link" })</li>
         </ul>
