se agrega modulo de mantenimientos

--- a/proyectoUNP/Views/Shared/_Layout.cshtml
+++ b/proyectoUNP/Views/Shared/_Layout.cshtml
@@ -69,6 +69,7 @@
             <li class="nav-item">@Html.ActionLink("BajaEmpleado", "BajaEmpleado", "Empleados", new { area = "" }, new { @class = "nav-link" })</li>
             <li class="nav-item">@Html.ActionLink("Activos", "Index", "Activos", new { area = "" }, new { @class = "nav-link" })</li>
             <li class="nav-item">@Html.ActionLink("Adquisicion", "Index", "Adquisiciones", new { area = "" }, new { @class = "nav-link" })</li>
+            <li class="nav-item">@Html.ActionLink("Mantenimentos", "Index", "Mantenimiento", new { area = "" }, new { @class = "nav-link" })</li>
         </ul>
     </div>
 
